--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                     </ol>
 
                     <!-- Форма отправки -->
-                    <form class="response-form" id="form-ds" action="https://formspree.io/f/xvzbzplz" method="POST">
+                    <form class="response-form" id="form-ds" action="https://formspree.io/f/xreaqnea" method="POST">
                         <input type="hidden" name="profession" value="Data Scientist">
                         <div class="form-group">
                             <label for="name-ds">Ваше имя:</label>
@@ -571,7 +571,7 @@
                     </ol>
 
                     <!-- Форма отправки -->
-                    <form class="response-form" id="form-da" action="https://formspree.io/f/xvzbzplz" method="POST">
+                    <form class="response-form" id="form-da" action="https://formspree.io/f/xreaqnea" method="POST">
                         <input type="hidden" name="profession" value="Data Analyst">
                         <div class="form-group">
                             <label for="name-da">Ваше имя:</label>
@@ -640,7 +640,7 @@
                     </ol>
 
                     <!-- Форма отправки -->
-                    <form class="response-form" id="form-stat" action="https://formspree.io/f/xvzbzplz" method="POST">
+                    <form class="response-form" id="form-stat" action="https://formspree.io/f/xreaqnea" method="POST">
                         <input type="hidden" name="profession" value="Статистик">
                         <div class="form-group">
                             <label for="name-stat">Ваше имя:</label>
@@ -710,7 +710,7 @@
                     </ol>
 
                     <!-- Форма отправки -->
-                    <form class="response-form" id="form-act" action="https://formspree.io/f/xvzbzplz" method="POST">
+                    <form class="response-form" id="form-act" action="https://formspree.io/f/xreaqnea" method="POST">
                         <input type="hidden" name="profession" value="Актуарий">
                         <div class="form-group">
                             <label for="name-act">Ваше имя:</label>
@@ -777,7 +777,7 @@
                     </ol>
 
                     <!-- Форма отправки -->
-                    <form class="response-form" id="form-bio" action="https://formspree.io/f/xvzbzplz" method="POST">
+                    <form class="response-form" id="form-bio" action="https://formspree.io/f/xreaqnea" method="POST">
                         <input type="hidden" name="profession" value="Биостатистик">
                         <div class="form-group">
                             <label for="name-bio">Ваше имя:</label>
@@ -848,7 +848,7 @@
                     </ol>
 
                     <!-- Форма отправки -->
-                    <form class="response-form" id="form-sport" action="https://formspree.io/f/xvzbzplz" method="POST">
+                    <form class="response-form" id="form-sport" action="https://formspree.io/f/xreaqnea" method="POST">
                         <input type="hidden" name="profession" value="Спортивный аналитик">
                         <div class="form-group">
                             <label for="name-sport">Ваше имя:</label>
